readme and man pages update

--- a/st.1
+++ b/st.1
@@ -58,6 +58,9 @@ disable alternate screens in terminal
 .BI \-c " class"
 defines the window class (default $TERM).
 .TP
+.BI \-d " dir"
+sets the working directory for the shell.
+.TP
 .BI \-f " font"
 defines the
 .I font
